Added whats-app floating button

--- a/src/app/features/about/pages/about/about.component.html
+++ b/src/app/features/about/pages/about/about.component.html
@@ -1,5 +1,4 @@
 <div class="about-page-main" id="about-page-main">
-  
   <div class="page-content-intro-hr">background</div>
 
   <div class="about-content">
@@ -41,9 +40,16 @@
           <span class="key-skills">SEO</span>, and
           <span class="key-skills">Source Control</span> (GitHub).
         </p>
+
+        <div class="btn-container">
+          <div name="explore" class="explore" (click)="redirectToProjects()">
+            explore projects
+          </div>
+        </div>
       </div>
     </div>
-    <div class="about-container">
+
+    <div class="about-container portfolio">
       <div class="set-heading">portfolio</div>
       <div class="set-container">
         <p>
@@ -51,11 +57,6 @@
           demonstration of my technical proficiency, problem-solving abilities,
           and dedication to creating exceptional user experiences.
         </p>
-        <div class="btn-container">
-          <div name="explore" class="explore" (click)="redirectToProjects()">
-            explore projects
-          </div>
-        </div>
       </div>
     </div>
   </div>
