--- a/src/app/features/skills-set/pages/skills-set/skills-set.component.html
+++ b/src/app/features/skills-set/pages/skills-set/skills-set.component.html
@@ -13,18 +13,27 @@
         <span class="skill"><i class="bi bi-code-slash"></i> Angular 16+</span>
       </div>
     </div>
+
     <div class="set-container">
       <div class="heading">Key skills</div>
       <div class="set">
-        <span class="skill"><i class="bi bi-lightbulb"></i> Responsive UIs</span>
+        <span class="skill"
+          ><i class="bi bi-lightbulb"></i> Responsive UIs</span
+        >
         <span class="skill"><i class="bi bi-lightbulb"></i> SEO & PO</span>
         <span class="skill"><i class="bi bi-lightbulb"></i> RESTful API</span>
         <span class="skill"><i class="bi bi-lightbulb"></i> Debugging</span>
         <span class="skill"><i class="bi bi-lightbulb"></i> Unit Testing</span>
         <span class="skill"><i class="bi bi-lightbulb"></i> Git & GitHub</span>
       </div>
+
+      <div class="btn-container">
+        <div name="explore" class="explore" (click)="redirectToProjects()">
+          explore projects
+        </div>
+      </div>
     </div>
-    
+
     <div class="set-container frameworks">
       <div class="heading">frameworks & libs</div>
       <div class="set">
@@ -37,18 +46,19 @@
       </div>
     </div>
 
-    <div class="set-container">
+    <div class="set-container tools">
       <div class="heading">ide & tools</div>
       <div class="set">
         <span class="skill"><i class="bi bi-app-indicator"></i> VS Code</span>
-        <span class="skill"><i class="bi bi-app-indicator"></i> Angular CLI</span>
+        <span class="skill"
+          ><i class="bi bi-app-indicator"></i> Angular CLI</span
+        >
         <span class="skill"><i class="bi bi-app-indicator"></i> DevTool</span>
         <span class="skill"><i class="bi bi-app-indicator"></i> Postman</span>
-        <span class="skill"><i class="bi bi-app-indicator"></i> Karma & Jasmine</span>
+        <span class="skill"
+          ><i class="bi bi-app-indicator"></i> Karma & Jasmine</span
+        >
         <span class="skill"><i class="bi bi-app-indicator"></i> Git bash</span>
-      </div>
-      <div class="btn-container">
-        <div name="explore" class="explore" (click)="redirectToProjects()">explore projects</div>
       </div>
     </div>
   </div>
