--- a/src/styles/pages/_about.scss
+++ b/src/styles/pages/_about.scss
@@ -67,7 +67,7 @@
             .about-container {
                 text-align: center;
 
-                &.background {
+                &.background,  &.portfolio {
                     display: none;
                 }
 
@@ -78,13 +78,13 @@
                 .btn-container {
                     text-align: center;
                     font-size: $font-size-xs;
-
+                    margin-bottom: $spacing-xs;
                     .explore {
                         display: block;
                         text-transform: uppercase;
                           padding: $spacing-sm - 2px;
                         background-color: red;
-                        margin: $spacing-md 30% 0;
+                        margin: $spacing-md 25% 0;
                         border-radius: $spacing-xs;
                         color: $light-neutral-font-color;
                     }
