--- a/src/app/features/projects/pages/projects/projects.component.html
+++ b/src/app/features/projects/pages/projects/projects.component.html
@@ -1,5 +1,6 @@
 <div class="projects-page-main" id="projects-page-main">
-  <div class="page-content-intro-hr">projects selection</div>
+
+  <div class="page-content-intro-hr">project</div>
 
   <section class="project-details">
     <div class="top-container">
@@ -35,6 +36,15 @@
               <i class="bi bi-box-arrow-up-right"></i>
               Online
             </span>
+
+            <span
+              class="view detail-btn "
+              (click)="expandCollapseDetails()"
+            >
+            <i *ngIf="isCollapsed === false"  class="bi bi-chevron-down"></i>
+            <i *ngIf="isCollapsed === true" class="bi bi-chevron-up"></i>
+              {{isBtnLabel}}
+            </span>
           </div>
         </div>
       </div>
@@ -49,7 +59,8 @@
       </div>
     </div>
 
-    <!-- <div *ngIf="project" class="bottom-container">
+    <div *ngIf=" (project && (isCollapsed))" class="bottom-container">
+      
       <div class="details-container project-concepts">
         <div class="heading">concepts</div>
         <div class="list-container">
@@ -90,11 +101,11 @@
           </div>
         </div>
       </div>
-    </div> -->
+    </div>
     
   </section>
 
-   <!-- <div class="page-content-intro-hr">selection</div> -->
+   <div class="page-content-intro-hr">selection</div>
 
   <section *ngIf="projectsList" class="featured-projects">
     <div *ngFor="let project of projectsList; let i = index" [class]="'project-container prj-' + i">
