--- a/src/app/layout/footer/footer/footer.component.html
+++ b/src/app/layout/footer/footer/footer.component.html
@@ -1,6 +1,5 @@
 <div id="footer" class="footer">
   <div class="footer-top-section">
-
     <div class="footer-item item-introduction">
       <div class="footer-item-title">developer</div>
       <p>
@@ -18,7 +17,7 @@
     </div>
 
     <div class="footer-item item-technology">
-      <div class="footer-item-title"> skills set</div>
+      <div class="footer-item-title">skills set</div>
       <div class="items-wrapper">
         <ul class="tech-list">
           <li>Responsive UI Design</li>
@@ -30,14 +29,26 @@
     </div>
 
     <div class="footer-item item-resources">
-      <div class="footer-item-title"> learning hub</div>
+      <div class="footer-item-title">learning hub</div>
       <ul class="resources-list">
-        <li><a href="https://sass-lang.com/" target="_blank" rel="noopener"> Learn - SCSS</a></li>
         <li>
-          <a href="https://www.typescriptlang.org/" target="_blank" > Learn - TypeScript</a>
+          <a href="https://sass-lang.com/" target="_blank" rel="noopener">
+            Learn - SCSS</a
+          >
         </li>
-        <li><a href="https://angular.io/"  target="_blank"> Learn - Angular</a></li>
-        <li><a href="https://javascript.info/"  target="_blank"> Learn - JavaScript </a></li>
+        <li>
+          <a href="https://www.typescriptlang.org/" target="_blank">
+            Learn - TypeScript</a
+          >
+        </li>
+        <li>
+          <a href="https://angular.io/" target="_blank"> Learn - Angular</a>
+        </li>
+        <li>
+          <a href="https://javascript.info/" target="_blank">
+            Learn - JavaScript
+          </a>
+        </li>
       </ul>
     </div>
 
@@ -45,7 +56,6 @@
       <div class="footer-item-title">contact details</div>
 
       <div class="contact-items">
-
         <div class="contact-item">
           <div class="item">
             <div class="item contact-number">(+27)79 691 0468</div>
@@ -54,7 +64,7 @@
                 >yingishirinda&#64;gmail.com</a
               >
             </div>
-             <div class="item contact-pages">
+            <div class="item contact-pages">
               <i class="bi bi-linkedin"></i>
               <i class="bi bi-github"></i>
               <i class="bi bi-whatsapp"></i>
@@ -64,7 +74,17 @@
         </div>
       </div>
     </div>
-    
+
+    <!-- WhatsApp floating button -->
+    <a
+      rel="noopener"
+      title="WhatsApp Chat"
+      href="https://wa.me/27796910468?text=Good day, I would like to hear more about your Angular Front-End Development. Please let me for know if you are available for discussion. Thank you."
+      class="float"
+      target="_blank"
+    >
+      <i class="bi bi-whatsapp my-float"></i>
+    </a>
   </div>
 
   <div class="footer-bottom-section">
