--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -105,6 +105,7 @@
                 }
             }
 
+
         }
 
         .footer-item {
@@ -116,7 +117,32 @@
                 margin-bottom: $spacing-xs + 4px;
                 @include heading-light;
             }
+
+
         }
+
+        //floating WhatsApp button
+        .float {
+            position: fixed;
+            width: 50px;
+            height: 50px;
+            bottom: 23px;
+            right: 15px;
+            background-color: #25d366;
+            color: white;
+            border-radius: 50px;
+            text-align: center;
+            font-size: 20px;
+            box-shadow: 2px 2px 11px #999;
+            z-index: 100;
+            padding: 3px;
+
+            .my-float {
+                font-size: 32px;
+            }
+        }
+
+
     }
 
     .footer-bottom-section {
