--- a/src/styles/layout/_navbar.scss
+++ b/src/styles/layout/_navbar.scss
@@ -39,7 +39,7 @@ $breakpoint: 768px;
       .bar {
         height: 3px;
         width: 100%;
-        background-color: $light;
+        background-color: lightgray;
         transition: all 0.3s ease;
       }
 
@@ -63,10 +63,12 @@ $breakpoint: 768px;
         border-top: 1px solid rgba(255, 255, 255, 0.1);
         text-align: center;
 
+
         a {
           display: block;
-          padding: 0.4rem;
-          color: $light;
+          padding: 0.6rem;
+          // color: $light;
+          color: $light-neutral-font-color;
           text-decoration: none;
 
           &:hover {
