sorting out request timer

--- a/src/app/features/home/pages/home/home.component.html
+++ b/src/app/features/home/pages/home/home.component.html
@@ -50,26 +50,25 @@
   <div class="homepage-content-section intro-container">
     
     <div class="developer-name">Hi, I’m <span class="name">Yingi</span></div>
-    <div class="developer-title">Angular Front-End Developer</div>
+    <div class="developer-title"> Front-End Developer</div>
 
     <p>
       I craft responsive, scalable, and user-friendly Single-Page applications
       (<span class="highlight">SPA</span>) that are clean, and robust using
       <span class="highlight">Angular Framework</span>. My expertise includes
-      SCSS, JavaScrip, TypeScript, RxJS, NgRx, and REST API Integration, along
-      with Unit Testing, Git and GitHub. Please check out my projects and reach
-      out if you'd like to chat!
+      Responsive UI Designs, JavaScrip, TypeScript, RxJS, NgRx, and REST API Integration, along
+      with Unit Testing, Git and GitHub.
     </p>
 
     <div class="intro-btn-container">
-      <button
+      <!-- <button
         type="button"
         class="intro-btn projects-btn"
         (click)="redirectToProjects()"
       >
         <i class="bi bi-app-indicator"></i>
         Projects
-      </button>
+      </button> -->
       <button
         type="button"
         class="intro-btn gitHub-btn"
