--- a/src/styles/themes/_dark.scss
+++ b/src/styles/themes/_dark.scss
@@ -62,6 +62,7 @@
 
                     .card-title {
                         color: #adb5bd;
+                        border-bottom: 1px solid $light-default-font-color;;
                     }
 
                     .card-button {
