--- a/src/app/layout/page-introduction/page-introduction/page-introduction.component.html
+++ b/src/app/layout/page-introduction/page-introduction/page-introduction.component.html
@@ -55,7 +55,7 @@
     </div>
   </div>
 
-  <div *ngIf="isLoading == true" id="spinner-container">
+  <!-- <div *ngIf="isLoading == true" id="spinner-container">
     <app-spinner [processMessage]="isLoadingMessage"></app-spinner>
-  </div>
+  </div> -->
 </div>
