--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -30,7 +30,7 @@
     &::after {
       content: '';
       flex: 1;
-      // border-bottom: 1px solid #e5e5e5;
+      border-bottom: 1px solid #e5e5e5;
     }
 
     &:not(:empty)::before {
