--- a/src/app/features/about/pages/about/about.component.html
+++ b/src/app/features/about/pages/about/about.component.html
@@ -26,19 +26,19 @@
       <div class="set-heading">skills & expertise</div>
       <div class="set-container">
         <p>
-          <i class="bi bi-bookmark-fill"></i> Solid foundation and proficient in
+          <i class="bi bi-bookmark-fill"></i> Proficient in
           <span class="key-skills">Responsive UI Designs</span>,
           <span class="key-skills">Angular 16+</span>,
           <span class="key-skills">TypeScript</span>,
+          <span class="key-skills">JavaScript</span>,
           <span class="key-skills">HTML5</span>,
           <span class="key-skills">SCSS</span>,
           <span class="key-skills">Bootstrap 5</span>,
-          <span class="key-skills">JavaScript</span>,
           <span class="key-skills">RESTful API integration</span>,
           <span class="key-skills">Unit Testing</span>,
           <span class="key-skills">RxJs</span>,
-          <span class="key-skills">SEO</span>, and
-          <span class="key-skills">Source Control</span> (GitHub).
+          <span class="key-skills">SEO & PO</span>, and
+          <span class="key-skills">Source Control</span> (GitHub & GitHub).
         </p>
 
         <div class="btn-container">
