--- a/src/app/layout/footer/footer/footer.component.html
+++ b/src/app/layout/footer/footer/footer.component.html
@@ -80,10 +80,10 @@
       rel="noopener"
       title="WhatsApp Chat"
       href="https://wa.me/27796910468?text=Good day, I would like to hear more about your Angular Front-End Development. Please let me for know if you are available for discussion. Thank you."
-      class="float"
+      class="whats-app-btn"
       target="_blank"
     >
-      <i class="bi bi-whatsapp my-float"></i>
+      <i class="bi bi-whatsapp whats-app-icon"></i>
     </a>
   </div>
 
