--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -20,6 +20,7 @@ $font-size-xl: 26px;
 $font-size-xxl: 32px;
 
 /* -- SPACING SIZES -- */
+$spacing-xxs: 4px;
 $spacing-xs: 6px;
 $spacing-sm: 10px;
 $spacing-md: 16px;
