--- a/src/styles/pages/_projects.scss
+++ b/src/styles/pages/_projects.scss
@@ -16,42 +16,6 @@
         box-shadow: $light-box-shadow;
         border-radius: $spacing-xs;
 
-        .details-container {
-            text-align: left;
-
-            .heading {
-                margin-bottom: $spacing-xs + 4px;
-                text-transform: uppercase;
-                background-color: $light-primary-bg-color;
-                border-radius: $spacing-xs;
-                padding: $spacing-xs $spacing-sm;
-                font-weight: bold;
-
-                &.project {
-                    border-radius: 0 $spacing-xs $spacing-xs 0;
-                    border-left: 5px solid red;
-                    font-weight: normal;
-                }
-            }
-
-            .details {
-                margin-left: $spacing-sm;
-
-                p {
-                    margin-bottom: $spacing-xs;
-                }
-
-                ul li {
-                    list-style: none;
-                    margin-bottom: $spacing-xs - 4px;
-
-                    .bi {
-                        margin-right: $spacing-xs;
-                    }
-                }
-            }
-        }
-
         .top-container {
             display: grid;
             grid-template-columns: 1fr 1fr;
@@ -71,7 +35,21 @@
                 }
 
                 .project-description {
-                    font-size: $font-size-sm + 2px;
+                    display: flex;
+                    flex-direction: column;
+
+
+                    .heading {
+                        @include heading-light;
+                        color: $comp-default-font-color;
+                        cursor: pointer;
+                        border-left: 8px solid red;
+                        border-radius: 0 $spacing-xxs $spacing-xxs 0;
+                    }
+
+                    .details {
+                        font-size: $font-size-md - 1px;
+                    }
 
                     .project-views {
                         display: flex;
@@ -93,11 +71,11 @@
             }
 
             .top-right-details {
-                font-size: $font-size-md;
 
                 .details {
                     border-left: 5px solid red;
                     padding: 0 $spacing-sm;
+                    font-size: $font-size-md;
                 }
             }
         }
@@ -120,12 +98,40 @@
                 color: brown;
             }
         }
+
+
+        .details-container {
+            text-align: left;
+
+            .heading {
+                @include heading-light;
+            }
+
+            .details {
+                margin-left: $spacing-sm;
+
+                p {
+                    margin-bottom: $spacing-xs;
+                }
+
+                ul li {
+                    list-style: none;
+                    margin-bottom: $spacing-xs - 4px;
+
+                    .bi {
+                        margin-right: $spacing-xs;
+                    }
+                }
+            }
+        }
     }
 
     .featured-projects {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         gap: 15px;
+        margin-top: -10px;
+        //  border: 1px solid #e5e5e5;
 
         .project-container {
             display: grid;
@@ -154,9 +160,9 @@
                 .project-name {
                     text-transform: uppercase;
                     background-color: $light-primary-bg-color;
-                    border-radius: 0 $spacing-xs $spacing-xs 0;
+                    border-radius: 0 $spacing-xxs $spacing-xxs 0;
                     border-left: 5px solid red;
-                    padding: 2px $spacing-sm;
+                    padding: 3px $spacing-sm;
                     cursor: pointer;
                     color: brown;
                     font-size: $font-size-sm - 2px;
@@ -291,7 +297,6 @@
                             display: none;
                         }
                     }
-
                 }
             }
         }
@@ -518,21 +523,25 @@
 
     @include respond-to("xs") {
 
+        margin-bottom: -5px;
         .project-details {
+            row-gap: 5px;
             .top-container {
                 row-gap: 20px;
 
                 .top-left-details {
                     grid-template-columns: 1fr;
+                    text-align: center;
 
                     .project-img-container {
                         img {
-                            min-height: 220px;
+                            min-height: 180px;
                             max-width: 100%;
                         }
                     }
 
                     .project-description {
+
                         .heading {
                             border: none;
                             border-radius: $spacing-xs;
@@ -541,7 +550,7 @@
                         .project-views {
                             display: flex;
                             flex-direction: row;
-                            justify-content: flex-start;
+                            justify-content: center;
                             gap: 5px;
                             flex-wrap: wrap;
                             border-radius: $spacing-xs;
@@ -559,15 +568,30 @@
 
                 .top-right-details {
                     font-size: $font-size-md - 1px;
+                    text-align: center;
+
+                    .project-description {
+                        .details {
+                            border: none;
+                        }
+
+                    }
                 }
             }
 
+            .bottom-container {
+                .details-container {
+                    text-align: center;
+                    i {
+                        display: none;
+                    }
+                }
+            }
         }
 
         .featured-projects {
             grid-template-columns: 1fr;
             row-gap: 15px;
-
             .project-container {
                 grid-template-columns: 2fr 5fr;
                 column-gap: 15px;
@@ -616,6 +640,10 @@
                 display: none;
             }
         }
+
+        .container {
+            margin: -15px 0;
+        }
     }
 
     @include respond-to("pre-xs") {
@@ -637,8 +665,6 @@
             .project-container {
                 .project-details-container {
                     .project-view-btns {
-                        // column-gap: 4px;
-
                         .view-btn {
                             min-width: 30px;
                         }
