--- a/src/styles/themes/_dark.scss
+++ b/src/styles/themes/_dark.scss
@@ -8,17 +8,6 @@
         background-color: var(--bg-color);
         color: var(--text-color);
 
-        // $primary: #2c3e50;
-        // #main-navbar {
-        //     background-color: $primary;
-        //     .navbar {
-        //         background-color: $primary;
-        //         &__menu {
-        //             background-color: $primary;
-        //         }
-        //     }
-        // }
-
         #page-instroduction {
             //  background-image: linear-gradient(to right, #abbaab 0%, #ffffff 51%, #abbaab 100%);
             // background-image: linear-gradient(to right, #000428 0%, #004e92  51%, #000428  100%);
@@ -62,7 +51,8 @@
 
                     .card-title {
                         color: #adb5bd;
-                        border-bottom: 1px solid $light-default-font-color;;
+                        border-bottom: 1px solid $light-default-font-color;
+                        ;
                     }
 
                     .card-button {
@@ -292,6 +282,16 @@
                         .top-left-details {
                             text-align: center;
                         }
+
+                        .top-right-details {
+                            text-align: center;
+                        }
+                    }
+
+                    .bottom-container {
+                        .details-container {
+                            text-align: center;
+                        }
                     }
                 }
 
@@ -310,6 +310,10 @@
                         }
 
                     }
+                }
+
+                .container {
+                    margin: -15px 0;
                 }
             }
         }
@@ -331,7 +335,13 @@
         }
 
         #footer {
-            border-top: 1px solid $light-default-font-color;
+            // border-top: 1px solid $light-default-font-color;
+
+            .footer-top-section {
+                .whats-app-btn {
+                    box-shadow: $dark-hover-box-shadow;
+                }
+            }
 
             .footer-item {
                 .footer-item-title {
